# webgraph-py

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: docs.yml  workflow.yml
webgraph/: Cargo.toml  README.md  pyproject.toml
webgraph-common/: Cargo.toml
webgraph-common/src/: lib.rs
webgraph-py-common/: Cargo.toml
webgraph-py-common/src/: lib.rs
webgraph-swh/: Cargo.toml  README.md  pyproject.toml
webgraph-swh/python/webgraph_swh/: __init__.py  __init__.pyi  _webgraph_swh.pyi
webgraph-swh/src/: lib.rs
webgraph/python/webgraph/: __init__.py  __init__.pyi  _webgraph.pyi
webgraph/src/: lib.rs
