[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "webgraph-swh"
version = "0.1.0"
requires-python = ">=3.10"
description = "Python bindings for Software Heritage graph access (built on webgraph)"
dependencies = ["numpy", "webgraph"]

[tool.maturin]
python-source = "python"
module-name = "webgraph_swh._webgraph_swh"
