[package]
name = "webgraph-py"
version = "0.1.0"
edition = "2024"
authors = [
	"Dario Moschetti <dariomos.dm@gmail.com>",
	"Sebastiano Vigna <sebastiano.vigna@unimi.it>",
]
license = "Apache-2.0 OR LGPL-2.1-or-later"
repository = "https://github.com/vigna/webgraph-py"

[lib]
name = "_webgraph"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { workspace = true }
numpy = { workspace = true }
rayon = { workspace = true }
dary_heap = { workspace = true }
dsi-bitstream = { workspace = true }
sux = { workspace = true }
webgraph = { workspace = true }
