[build-system]
requires = ["maturin>=1.8,<2"]
build-backend = "maturin"

[project]
name = "webgraph"
version = "0.1.2"
requires-python = ">=3.10"
description = "Python bindings for the Rust version of the WebGraph framework"
readme = "README.md"
license = "Apache-2.0 OR LGPL-2.1-or-later"
keywords = ["graph", "compression", "webgraph", "bvgraph", "succinct"]
authors = [
    { name = "Sebastiano Vigna", email = "sebastiano.vigna@unimi.it" },
    { name = "Dario Moschetti", email = "dariomos.dm@gmail.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = ["numpy"]

[project.urls]
Documentation = "https://vigna.github.io/webgraph-py/webgraph.html"
Repository = "https://github.com/vigna/webgraph-py"
"Bug Tracker" = "https://github.com/vigna/webgraph-py/issues"
Changelog = "https://github.com/vigna/webgraph-py/releases"

[tool.maturin]
python-source = "python"
module-name = "webgraph._webgraph"
strip = true
